; ModuleID = '/home/carl/AnghaBench/radare2/libr/magic/extr_apprentice.c_get_type.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/magic/extr_apprentice.c_get_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.type_tbl_s = type { i32, i32, i32 }

@type_tbl = common dso_local global %struct.type_tbl_s* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8**)* @get_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_type(i8* %0, i8** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.type_tbl_s*, align 8
  store i8* %0, i8** %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load %struct.type_tbl_s*, %struct.type_tbl_s** @type_tbl, align 8
  store %struct.type_tbl_s* %6, %struct.type_tbl_s** %5, align 8
  br label %7

7:                                                ; preds = %35, %2
  %8 = load %struct.type_tbl_s*, %struct.type_tbl_s** %5, align 8
  %9 = getelementptr inbounds %struct.type_tbl_s, %struct.type_tbl_s* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %38

12:                                               ; preds = %7
  %13 = load i8*, i8** %3, align 8
  %14 = load %struct.type_tbl_s*, %struct.type_tbl_s** %5, align 8
  %15 = getelementptr inbounds %struct.type_tbl_s, %struct.type_tbl_s* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.type_tbl_s*, %struct.type_tbl_s** %5, align 8
  %18 = getelementptr inbounds %struct.type_tbl_s, %struct.type_tbl_s* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @strncmp(i8* %13, i32 %16, i32 %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %34

22:                                               ; preds = %12
  %23 = load i8**, i8*** %4, align 8
  %24 = icmp ne i8** %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %22
  %26 = load i8*, i8** %3, align 8
  %27 = load %struct.type_tbl_s*, %struct.type_tbl_s** %5, align 8
  %28 = getelementptr inbounds %struct.type_tbl_s, %struct.type_tbl_s* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i8, i8* %26, i64 %30
  %32 = load i8**, i8*** %4, align 8
  store i8* %31, i8** %32, align 8
  br label %33

33:                                               ; preds = %25, %22
  br label %38

34:                                               ; preds = %12
  br label %35

35:                                               ; preds = %34
  %36 = load %struct.type_tbl_s*, %struct.type_tbl_s** %5, align 8
  %37 = getelementptr inbounds %struct.type_tbl_s, %struct.type_tbl_s* %36, i32 1
  store %struct.type_tbl_s* %37, %struct.type_tbl_s** %5, align 8
  br label %7

38:                                               ; preds = %33, %7
  %39 = load %struct.type_tbl_s*, %struct.type_tbl_s** %5, align 8
  %40 = getelementptr inbounds %struct.type_tbl_s, %struct.type_tbl_s* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  ret i32 %41
}

declare dso_local i64 @strncmp(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
